<resources>
    <string name="app_name">Registration 2</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="list_of_users">List of Users</string>
    <string name="back_to_register">Back to Register</string>
</resources>