<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.RegistrationFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_reg_left"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".2"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_reg_right"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".8"/>

    <EditText
        android:id="@+id/reg_name_et"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hint="@string/name"
        app:layout_constraintStart_toStartOf="@+id/gl_reg_left"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/gl_reg_right"
        app:layout_constraintBottom_toTopOf="@+id/reg_email_et"/>

    <EditText
        android:id="@+id/reg_email_et"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hint="@string/email"
        app:layout_constraintStart_toStartOf="@+id/gl_reg_left"
        app:layout_constraintEnd_toEndOf="@+id/gl_reg_right"
        app:layout_constraintTop_toBottomOf="@+id/reg_name_et"
        app:layout_constraintBottom_toTopOf="@+id/reg_username_et"/>

    <EditText
        android:id="@+id/reg_username_et"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hint="@string/username"
        app:layout_constraintStart_toStartOf="@+id/gl_reg_left"
        app:layout_constraintEnd_toEndOf="@+id/gl_reg_right"
        app:layout_constraintTop_toBottomOf="@id/reg_email_et"
        app:layout_constraintBottom_toTopOf="@id/reg_password_et"/>

    <EditText
        android:id="@+id/reg_password_et"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hint="@string/password"
        app:layout_constraintStart_toStartOf="@+id/gl_reg_left"
        app:layout_constraintEnd_toEndOf="@+id/gl_reg_right"
        app:layout_constraintTop_toBottomOf="@id/reg_username_et"
        app:layout_constraintBottom_toBottomOf="@id/reg_complete_button"/>

    <Button
        android:id="@+id/reg_complete_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/reg_password_et"
        app:layout_constraintStart_toStartOf="@id/gl_reg_left"
        app:layout_constraintEnd_toEndOf="@id/gl_reg_right"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/register"/>


</androidx.constraintlayout.widget.ConstraintLayout>